--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
----
+---ChuiL
 layout: page
 title: "About"
-description: "Hey, this is Hux."
+description: "Hey, this is CHuiL."
 header-img: "img/about-bg.jpg"
 ---
 
